// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App create 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 csCWTP"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fPEDOD"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fVwFV"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 brIbTg"
        >
          <div
            class="StyledGrid-sc-1wofa1l-0 ARgvw"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iduUcI"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 jfHPpp"
            >
              <h1
                class="StyledHeading-sc-1rdh4aw-0 gXYoeW"
              >
                grommet designer
              </h1>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 dehDpZ"
            >
              <p
                class="StyledParagraph-sc-tbetod-0 hmBzlk"
              >
                design with grommet components
              </p>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 cEdQcm"
            >
              <a
                class="StyledButton-sc-323bzc-0 gClEyo"
                href="/_new"
                title="start a new design"
              >
                New
              </a>
            </div>
          </div>
        </header>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 dRbQGU"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 jhwsXN"
      >
        <span
          class="StyledText-sc-1sadyjn-0 eRxQTp"
        >
          Hi, ... maybe create a new design?
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 dRbQGU"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 fVwFV"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 hdlnlw FileInput__ContentsBox-sc-1jzq7im-0 dEasdy"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 bNZYRh"
          >
            <span
              class="StyledText-sc-1sadyjn-0 bGnOTc FileInput__Message-sc-1jzq7im-2 iZFqsV"
            >
              Import - drop design file here
            </span>
            <a
              class="StyledAnchor-sc-1rp7lwl-0 goYAIb"
              tabindex="0"
            >
              browse
            </a>
          </div>
          <input
            accept=".json"
            class="StyledFileInput-sc-rl7ywv-0 evbEmK"
            type="file"
          />
        </div>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 dRbQGU"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 hXRPWj"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 fVwFV"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 gQSWGg"
          >
            <h2
              class="StyledHeading-sc-1rdh4aw-0 idXjQT"
            >
              storage
            </h2>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jYnkdL"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 dbdxbu"
            >
              <svg
                class="StyledMeter-sc-nsxarx-0 fVMZrb"
                height="24"
                preserveAspectRatio="none"
                viewBox="0 0 384 24"
                width="384"
              >
                <path
                  d="M 0,12 L 384,12"
                  fill="none"
                  stroke="#F2F2F2"
                  stroke-linecap="square"
                  stroke-opacity="0.4"
                  stroke-width="24"
                />
              </svg>
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ejkSNv"
              />
              <span
                class="StyledText-sc-1sadyjn-0 lhOBjf"
              >
                0 K total
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 dRbQGU"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 fVwFV"
      >
        <footer
          class="StyledBox-sc-13pk1d4-0 fkdWrR"
        >
          <button
            aria-label="Change settings"
            class="StyledButton-sc-323bzc-0 nJvlo"
            type="button"
          >
            <svg
              aria-label="Brush"
              class="StyledIcon-sc-ofa7kd-0 ejqDKc"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.312 11.73a5.001 5.001 0 0 0-5.362 1.12c-1.953 1.952-1.414 8.485-1.414 8.485s6.532.538 8.485-1.415a5.001 5.001 0 0 0 1.12-5.362L22.334 4.364a1.997 1.997 0 0 0 0-2.828 1.995 1.995 0 0 0-2.828 0L9.312 11.729zm1.002-1.617 1.838 1.838 1.697 1.697"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </footer>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 2`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 csCWTP"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fPEDOD"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fVwFV"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 PxIza"
        >
          <div
            class="StyledGrid-sc-1wofa1l-0 ARgvw"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iduUcI"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 jfHPpp"
            >
              <h1
                class="StyledHeading-sc-1rdh4aw-0 gXYoeW"
              >
                new design
              </h1>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 dehDpZ"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 cEdQcm"
            >
              <button
                aria-label="cancel creating a new design"
                class="StyledButton-sc-323bzc-0 gPnbVE"
                type="button"
              >
                <svg
                  aria-label="Close"
                  class="StyledIcon-sc-ofa7kd-0 ejqDKc"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m3 3 18 18M3 21 21 3"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </button>
            </div>
          </div>
        </header>
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 jstWSP FormField__FormFieldBox-sc-m9hood-0 geyDmP"
          >
            <label
              class="StyledText-sc-1sadyjn-0 esfeug"
              for="name"
            >
              name
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 bnAVOh FormField__FormFieldContentBox-sc-m9hood-1 fdkHPz"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dAhNeU"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 kdbOVS"
                  id="name"
                  name="name"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 dyEToS"
            id="startWith"
            role="radiogroup"
          >
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hwlEbV"
              for="startWith-start with a blank design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 iuoTxe StyledRadioButton-sc-g1f6ld-5 fjvsCI"
              >
                <input
                  checked=""
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fHUYwn"
                  id="startWith-start with a blank design"
                  name="startWith"
                  tabindex="0"
                  type="radio"
                  value="start with a blank design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 dUmpXQ StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 fqIocy"
                >
                  <svg
                    class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 bsYuff"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="6"
                    />
                  </svg>
                </div>
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                start with a blank design
              </span>
            </label>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ejkSNv"
            />
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hwlEbV"
              for="startWith-duplicate an existing design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 iuoTxe StyledRadioButton-sc-g1f6ld-5 fjvsCI"
              >
                <input
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fHUYwn"
                  id="startWith-duplicate an existing design"
                  name="startWith"
                  tabindex="-1"
                  type="radio"
                  value="duplicate an existing design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 bKYcZs StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 fqIocy"
                />
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                duplicate an existing design
              </span>
            </label>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 jstWSP FormField__FormFieldBox-sc-m9hood-0 geyDmP"
          >
            <label
              class="StyledText-sc-1sadyjn-0 esfeug"
            >
              theme
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 gkHEjs FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 byKVaK"
                role="radiogroup"
              >
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hwlEbV"
                  for="grommet"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 iuoTxe StyledRadioButton-sc-g1f6ld-5 fjvsCI"
                  >
                    <input
                      checked=""
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fHUYwn"
                      id="grommet"
                      name="theme"
                      tabindex="0"
                      type="radio"
                      value="grommet"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 dUmpXQ StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 fqIocy"
                    >
                      <svg
                        class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 bsYuff"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="6"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    grommet
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ejkSNv"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hwlEbV"
                  for="hpe"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 iuoTxe StyledRadioButton-sc-g1f6ld-5 fjvsCI"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fHUYwn"
                      id="hpe"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="hpe"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 bKYcZs StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 fqIocy"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    hpe
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ejkSNv"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hwlEbV"
                  for="other"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 iuoTxe StyledRadioButton-sc-g1f6ld-5 fjvsCI"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fHUYwn"
                      id="other"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="other"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 bKYcZs StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 fqIocy"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    other
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 jstWSP FormField__FormFieldBox-sc-m9hood-0 geyDmP"
          >
            <label
              class="StyledText-sc-1sadyjn-0 esfeug"
              for="includes"
            >
              include other designs to be able to copy their components
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 bnAVOh FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="none"
                class="StyledButton-sc-323bzc-0 ePQa-DT StyledSelect__StyledSelectDropButton-sc-znp66n-5 eUyixX"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 jXUMNe"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 djHtJk"
                  >
                    <div
                      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dAhNeU"
                    >
                      <input
                        autocomplete="off"
                        class="StyledTextInput-sc-1x30a0s-0 kdbOVS StyledSelect__SelectTextInput-sc-znp66n-4 gbaNVM"
                        name="includes"
                        placeholder="none"
                        readonly=""
                        tabindex="-1"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 gnAxhJ"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 eSslYk"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 BsHmh"
          >
            <button
              class="StyledButton-sc-323bzc-0 gClEyo"
              title="create design"
              type="submit"
            >
              Create Design
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 3`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 csCWTP"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fPEDOD"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fVwFV"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 PxIza"
        >
          <div
            class="StyledGrid-sc-1wofa1l-0 ARgvw"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iduUcI"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 jfHPpp"
            >
              <h1
                class="StyledHeading-sc-1rdh4aw-0 gXYoeW"
              >
                new design
              </h1>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 dehDpZ"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 cEdQcm"
            >
              <button
                aria-label="cancel creating a new design"
                class="StyledButton-sc-323bzc-0 gPnbVE"
                type="button"
              >
                <svg
                  aria-label="Close"
                  class="StyledIcon-sc-ofa7kd-0 ejqDKc"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m3 3 18 18M3 21 21 3"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </button>
            </div>
          </div>
        </header>
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 jstWSP FormField__FormFieldBox-sc-m9hood-0 geyDmP"
          >
            <label
              class="StyledText-sc-1sadyjn-0 esfeug"
              for="name"
            >
              name
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 bnAVOh FormField__FormFieldContentBox-sc-m9hood-1 fdkHPz"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dAhNeU"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 kdbOVS"
                  id="name"
                  name="name"
                  value="test design"
                />
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 dyEToS"
            id="startWith"
            role="radiogroup"
          >
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hwlEbV"
              for="startWith-start with a blank design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 iuoTxe StyledRadioButton-sc-g1f6ld-5 fjvsCI"
              >
                <input
                  checked=""
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fHUYwn"
                  id="startWith-start with a blank design"
                  name="startWith"
                  tabindex="0"
                  type="radio"
                  value="start with a blank design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 dUmpXQ StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 fqIocy"
                >
                  <svg
                    class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 bsYuff"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="6"
                    />
                  </svg>
                </div>
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                start with a blank design
              </span>
            </label>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ejkSNv"
            />
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hwlEbV"
              for="startWith-duplicate an existing design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 iuoTxe StyledRadioButton-sc-g1f6ld-5 fjvsCI"
              >
                <input
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fHUYwn"
                  id="startWith-duplicate an existing design"
                  name="startWith"
                  tabindex="-1"
                  type="radio"
                  value="duplicate an existing design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 bKYcZs StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 fqIocy"
                />
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                duplicate an existing design
              </span>
            </label>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 jstWSP FormField__FormFieldBox-sc-m9hood-0 geyDmP"
          >
            <label
              class="StyledText-sc-1sadyjn-0 esfeug"
            >
              theme
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 gkHEjs FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 byKVaK"
                role="radiogroup"
              >
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hwlEbV"
                  for="grommet"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 iuoTxe StyledRadioButton-sc-g1f6ld-5 fjvsCI"
                  >
                    <input
                      checked=""
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fHUYwn"
                      id="grommet"
                      name="theme"
                      tabindex="0"
                      type="radio"
                      value="grommet"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 dUmpXQ StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 fqIocy"
                    >
                      <svg
                        class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 bsYuff"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="6"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    grommet
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ejkSNv"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hwlEbV"
                  for="hpe"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 iuoTxe StyledRadioButton-sc-g1f6ld-5 fjvsCI"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fHUYwn"
                      id="hpe"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="hpe"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 bKYcZs StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 fqIocy"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    hpe
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ejkSNv"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 hwlEbV"
                  for="other"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 iuoTxe StyledRadioButton-sc-g1f6ld-5 fjvsCI"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fHUYwn"
                      id="other"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="other"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 bKYcZs StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 fqIocy"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    other
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 jstWSP FormField__FormFieldBox-sc-m9hood-0 geyDmP"
          >
            <label
              class="StyledText-sc-1sadyjn-0 esfeug"
              for="includes"
            >
              include other designs to be able to copy their components
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 bnAVOh FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="none"
                class="StyledButton-sc-323bzc-0 ePQa-DT StyledSelect__StyledSelectDropButton-sc-znp66n-5 eUyixX"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 jXUMNe"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 djHtJk"
                  >
                    <div
                      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dAhNeU"
                    >
                      <input
                        autocomplete="off"
                        class="StyledTextInput-sc-1x30a0s-0 kdbOVS StyledSelect__SelectTextInput-sc-znp66n-4 gbaNVM"
                        name="includes"
                        placeholder="none"
                        readonly=""
                        tabindex="-1"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 gnAxhJ"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 eSslYk"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 BsHmh"
          >
            <button
              class="StyledButton-sc-323bzc-0 gClEyo"
              title="create design"
              type="submit"
            >
              Create Design
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 4`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 csCWTP"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 krBVvZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 RbeKy"
      >
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 jstWSP FormField__FormFieldBox-sc-m9hood-0 geyDmP"
          >
            <label
              class="StyledText-sc-1sadyjn-0 esfeug"
              for="template"
            >
              screen template
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 bnAVOh FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Open Drop; Selected: [object Object]"
                class="StyledButton-sc-323bzc-0 ePQa-DT StyledSelect__StyledSelectDropButton-sc-znp66n-5 eUyixX"
                id="template"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 jXUMNe"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 djHtJk"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 jhrjiD"
                    >
                      <span
                        class="StyledText-sc-1sadyjn-0 hUfGMB"
                      >
                        empty page
                      </span>
                      <div
                        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ejkSNv"
                      />
                      <span
                        class="StyledText-sc-1sadyjn-0 duzUiw"
                      >
                        generic
                      </span>
                    </div>
                    <input
                      class="StyledSelect__HiddenInput-sc-znp66n-2 etRwXL"
                      id="template__input"
                      name="template"
                      readonly=""
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 gnAxhJ"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 eSslYk"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 kYOLuO"
          >
            <button
              class="StyledButton-sc-323bzc-0 gClEyo"
              title="Use selected screen template"
              type="submit"
            >
              Use Template
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 5`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 csCWTP"
  >
    <div
      class="StyledGrommet-sc-19lkkz7-0 jpRfPH"
      id="designer-canvas"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jtBMKN"
        id="2"
        style="outline: 1px dashed red;"
        tabindex="-1"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 cBpzQx"
          id="3"
          tabindex="-1"
        >
          <div
            class="sc-gueYoa bIQMJz"
          >
            <p
              class="StyledParagraph-sc-tbetod-0 dWSmbz"
            >
              This PageContent is currently empty. Add some content to it.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
